--- a/index.html
+++ b/index.html
@@ -19,13 +19,64 @@
   <title>Frontend Mentor | Pod request access landing page</title>
 </head>
 <body>
-  Publish your podcasts everywhere.
-
-  Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
-  Apple Podcasts, Google Podcasts, Pocket Casts and more!
-
-  Request access
-
+  <div class="container-fluid">
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <img src="./assets/images/desktop/logo.svg" alt="logo">
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1>Publish your podcasts<span>everywhere.</span></h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <p>Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
+              Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="form-group">
+              <label for="email" class="sr-only">Email address</label>
+              <input type="text" class="form-control" id="email" placeholder="Email address">
+            </div>
+            <button type="button" class="btn btn-info">Request access</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <img src="./assets/images/desktop/spotify.svg" alt="spotify">
+          </div>
+          <div class="col-3">
+            <img src="./assets/images/desktop/apple-podcast.svg" alt="apple-podcast">
+          </div>
+          <div class="col-3">
+            <img src="./assets/images/desktop/google-podcasts.svg" alt="google-podcasts">
+          </div>
+          <div class="col-3">
+            <img src="./assets/images/desktop/pocket-casts.svg" alt="pocket-casts">
+          </div>
+        </div>
+      </div>
+    </main>
+  </div>
+  <section>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12">
+          <img src="./assets/images/desktop/bg-pattern-dots.svg" alt="bg-pattern-dots">
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
