--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
@@ -19,64 +19,52 @@
   <title>Frontend Mentor | Pod request access landing page</title>
 </head>
 <body>
-  <div class="container-fluid">
-    <header>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <img src="./assets/images/desktop/logo.svg" alt="logo">
-          </div>
-        </div>
-      </div>
-    </header>
-    <main>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <h1>Publish your podcasts<span>everywhere.</span></h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <p>Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
-              Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <div class="form-group">
-              <label for="email" class="sr-only">Email address</label>
-              <input type="text" class="form-control" id="email" placeholder="Email address">
-            </div>
-            <button type="button" class="btn btn-info">Request access</button>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            <img src="./assets/images/desktop/spotify.svg" alt="spotify">
-          </div>
-          <div class="col-3">
-            <img src="./assets/images/desktop/apple-podcast.svg" alt="apple-podcast">
-          </div>
-          <div class="col-3">
-            <img src="./assets/images/desktop/google-podcasts.svg" alt="google-podcasts">
-          </div>
-          <div class="col-3">
-            <img src="./assets/images/desktop/pocket-casts.svg" alt="pocket-casts">
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-  <section>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <img src="./assets/images/desktop/bg-pattern-dots.svg" alt="bg-pattern-dots">
-        </div>
+  <div class="overlay"></div>
+  <div class="container-fluid content">
+    <div class="row header">
+      <div class="col-12">
+        <header class="d-flex justify-content-center">
+          <img src="./assets/images/desktop/logo.svg" alt="logo">
+        </header>
       </div>
     </div>
-  </section>
+    <div class="row">
+      <div class="col-12">
+        <main class="d-flex flex-column">
+          <h1 class="text-center text-md-left mb-4">Publish your podcasts <span class="d-block">everywhere.</span></h1>
+          <p class="instruction text-center text-md-left px-3 mb-0">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
+            Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
+          <div class="row featured-platforms px-4">
+            <div class="col-3">
+              <img src="./assets/images/desktop/spotify.svg" alt="spotify">
+            </div>
+            <div class="col-3">
+              <img src="./assets/images/desktop/apple-podcast.svg" alt="apple-podcast">
+            </div>
+            <div class="col-3">
+              <img src="./assets/images/desktop/google-podcasts.svg" alt="google-podcasts">
+            </div>
+            <div class="col-3">
+              <img src="./assets/images/desktop/pocket-casts.svg" alt="pocket-casts">
+            </div>
+          </div>
+          <div class="form-group py-3 px-3">
+            <label for="email" class="sr-only">Email address</label>
+            <input type="text" class="form-control rounded-pill email" id="email" placeholder="Email address">
+            <button type="button" class="btn btn-info form-control rounded-pill btn-request px-3 my-3">Request access</button>
+          </div>
+          
+        </main>
+      </div>
+    </div>
+    <div class="row d-none d-md-block">
+      <div class="col-12">
+        <section>
+          <img src="./assets/images/desktop/bg-pattern-dots.svg" alt="bg-pattern-dots">
+        </section>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
