--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <main class="d-flex flex-column">
-          <h1 class="text-center text-md-left mb-4">Publish your podcasts <span class="d-block">everywhere.</span></h1>
+        <main class="d-flex flex-column mb-5">
+          <h1 class="text-center text-md-left mb-4">Publish your podcasts <span class="title-emphasis d-block">everywhere.</span></h1>
           <p class="instruction text-center text-md-left px-3 mb-0">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
             Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
-          <div class="row featured-platforms px-4">
+          <div class="row featured-platforms px-4 d-flex justify-content-center align-items-center">
             <div class="col-3">
               <img src="./assets/images/desktop/spotify.svg" alt="spotify">
             </div>
@@ -51,9 +51,8 @@
           <div class="form-group py-3 px-3">
             <label for="email" class="sr-only">Email address</label>
             <input type="text" class="form-control rounded-pill email" id="email" placeholder="Email address">
-            <button type="button" class="btn btn-info form-control rounded-pill btn-request px-3 my-3">Request access</button>
+            <button type="button" class="btn form-control rounded-pill btn-request px-3 my-3">Request access</button>
           </div>
-          
         </main>
       </div>
     </div>
