Styles for tablets devices

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container-fluid content">
     <div class="row header">
       <div class="col-12">
-        <header class="d-flex justify-content-center">
+        <header class="d-flex justify-content-center justify-content-md-start">
           <img src="./assets/images/desktop/logo.svg" alt="logo">
         </header>
       </div>
@@ -31,10 +31,10 @@
     <div class="row">
       <div class="col-12">
         <main class="d-flex flex-column mb-5">
-          <h1 class="text-center text-md-left mb-4">Publish your podcasts <span class="title-emphasis d-block">everywhere.</span></h1>
-          <p class="instruction text-center text-md-left px-3 mb-0">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
+          <h1 class="text-center text-md-left mb-4 order-1">Publish your podcasts <span class="title-emphasis d-block">everywhere.</span></h1>
+          <p class="instruction text-center text-md-left px-3 px-md-0 order-2">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
             Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
-          <div class="row featured-platforms px-4 d-flex justify-content-center align-items-center">
+          <div class="row featured-platforms px-4 px-md-0 d-flex justify-content-center justify-content-md-start align-items-center order-3 order-md-4">
             <div class="col-3">
               <img src="./assets/images/desktop/spotify.svg" alt="spotify">
             </div>
@@ -48,15 +48,15 @@
               <img src="./assets/images/desktop/pocket-casts.svg" alt="pocket-casts">
             </div>
           </div>
-          <div class="form-group py-3 px-3">
+          <div class="form-group access-form py-3 px-3 px-md-0 order-4 order-md-3">
             <label for="email" class="sr-only">Email address</label>
             <input type="text" class="form-control rounded-pill email" id="email" placeholder="Email address">
-            <button type="button" class="btn form-control rounded-pill btn-request px-3 my-3">Request access</button>
+            <button type="button" class="btn form-control rounded-pill btn-request px-3 my-3 my-md-0">Request access</button>
           </div>
         </main>
       </div>
     </div>
-    <div class="row d-none d-md-block">
+    <div class="row pattern-dots d-none d-md-block">
       <div class="col-12">
         <section>
           <img src="./assets/images/desktop/bg-pattern-dots.svg" alt="bg-pattern-dots">
