Fix issues for min-width: 768px tablet - landscape

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <main class="d-flex flex-column mb-5">
+        <main class="d-flex flex-column">
           <h1 class="text-center text-md-left mb-4 order-1">Publish your podcasts <span class="title-emphasis d-block">everywhere.</span></h1>
           <p class="instruction text-center text-md-left px-3 px-md-0 order-2">Upload your audio to Pod with a single click. We’ll then distribute your podcast to Spotify, 
             Apple Podcasts, Google Podcasts, Pocket Casts and more!</p>
