--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
           </div>
           <div class="form-group access-form py-3 px-3 px-md-0 order-4 order-md-3">
             <label for="email" class="sr-only">Email address</label>
-            <input type="text" class="form-control rounded-pill email" id="email" placeholder="Email address">
-            <button type="button" class="btn form-control rounded-pill btn-request px-3 my-3 my-md-0">Request access</button>
+            <input type="email" class="form-control rounded-pill email" id="email" placeholder="Email address" required>
+            <p class="email-error">Oops! Please check your email</p>
+            <button type="submit" class="btn form-control rounded-pill btn-request px-3 my-3 my-md-0">Request access</button>
           </div>
         </main>
       </div>
@@ -67,5 +68,6 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
