Update display of email error message

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <label for="email" class="sr-only">Email address</label>
             <input type="email" class="form-control rounded-pill email" id="email" placeholder="Email address" required>
             <p class="email-error">Oops! Please check your email</p>
-            <button type="submit" class="btn form-control rounded-pill btn-request px-3 my-3 my-md-0">Request access</button>
+            <button type="submit" class="btn form-control rounded-pill btn-request px-3">Request access</button>
           </div>
         </main>
       </div>
